Updated Email to Support

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
   </p>
   <p>
     If you have any questions about this Privacy Policy, please contact us at 
-    <a href="mailto:bytecreedlabs@gmail.com?subject=Privacy%20Policy%20Inquiry">bytecreedlabs@gmail.com</a>.
+    <a href="mailto:support@bytecreed.com?subject=Privacy%20Policy%20Inquiry">support@bytecreed.com</a>.
   </p>
 </body>
 </html>
+
