--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#39608F">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#39608F">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#39608F">
   <title>Privacy Policy</title>
   <style>
     body {
@@ -43,4 +49,5 @@
   </p>
 </body>
 </html>
+
 
